update module-related config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,11 @@
     "declaration": true,
     "emitBOM": false,
     "esModuleInterop": true,
-    "importsNotUsedAsValues": "error",
+    "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "newLine": "LF",
     "noEmitOnError": true,
     "noUncheckedIndexedAccess": true,
