fix for TypeScript 5.2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "module": "esnext",
+    "module": "nodenext",
     "moduleResolution": "nodenext",
     "newLine": "LF",
     "noEmitOnError": true,
